<resources>
    <string name="app_name">Capway</string>
    <string name="application_title">Account</string>
    <string name="account_menu_title">Account</string>
    <string name="send_menu_title">Send</string>
    <string name="more_menu_title">More</string>
    <string name="learn_menu_title">Learn</string>
    <string name="phunds_menu_title">Phunds</string>
    <string name="transactions_title">Transactions</string>
    <string name="money_goals_title">Money Goals</string>
    <string name="activity_title">Activity</string>
    <string name="statements_title">Statements</string>
    <string name="account_settings_title">Account Settings</string>
    <string name="alert_title">Alert</string>
    <string name="account_balance_title">Account Balance</string>
    <string name="pending_charges_title">Pending Charges</string>
    <string name="money_text">$%1$s</string>
    <string name="positive_negative_money_text">%1$s$%2$s</string>
    <string name="capway_card_title">CapWay Card</string>
    <string name="card_status">Card %1$s is %2$s</string>
    <string name="virtual_card">Virtual Card</string>
    <string name="add_funds">Add Funds</string>
    <string name="transactions">Transactions</string>
    <string name="deposits">Deposits</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="pending">Pending</string>
    <string name="search">Search</string>
</resources>