<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/scroll_child"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/account_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginHorizontal="18dp">
            <TextView
                android:id="@+id/account_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/accountBalance"/>
            <TextView
                android:id="@+id/account_balance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/account_balance"
                app:layout_constraintStart_toStartOf="@id/account_balance"
                android:layout_marginTop="2dp"
                style="@style/accountBalanceTitle"
                android:alpha=".75"
                android:text="@string/account_balance_title"/>
            <TextView
                android:id="@+id/pending_charges_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/account_balance_title"
                app:layout_constraintBottom_toTopOf="@+id/account_details_bottom_divider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                style="@style/pendingChargesTitle"
                android:text="@string/pending_charges_title"/>
            <TextView
                android:id="@+id/pending_charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/pending_charges_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:alpha=".75"
                style="@style/pendingCharges"/>
            <View
                android:id="@+id/account_details_bottom_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/pending_charges"
                android:background="@color/capway_offwhite"/>
            <TextView
                android:id="@+id/capway_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/account_details_bottom_divider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="4dp"
                android:text="@string/capway_card_title"
                style="@style/capwayCardTitle"/>

            <ImageView
                android:id="@+id/capway_card_image"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:paddingLeft="-14dp"
                app:layout_constraintTop_toBottomOf="@id/capway_card_title"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/card_icon"/>
            <TextView
                android:id="@+id/card_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/capway_card_image"
                app:layout_constraintStart_toEndOf="@id/capway_card_image"
                android:layout_marginTop="14dp"
                style="@style/cardStatus" />

            <TextView
                android:id="@+id/virtual_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/card_status"
                app:layout_constraintTop_toBottomOf="@id/card_status"
                android:layout_marginTop="8dp"
                android:text="@string/virtual_card"
                style="@style/anchorText" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/virtual_card"
                app:layout_constraintEnd_toStartOf="@id/add_funds"
                app:layout_constraintTop_toTopOf="@id/virtual_card"
                app:layout_constraintBottom_toBottomOf="@id/virtual_card"
                android:gravity="center">
                <View
                    android:layout_height="2dp"
                    android:layout_width="2dp"
                    android:background="@drawable/grey_circle" />
            </LinearLayout>

            <TextView
                android:id="@+id/add_funds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/virtual_card"
                app:layout_constraintTop_toTopOf="@id/virtual_card"
                android:layout_marginLeft="12dp"
                android:text="@string/add_funds"
                style="@style/anchorText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transactions_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabIndicatorColor="@color/capway_darker_blue"
                app:tabSelectedTextColor="@color/capway_black_text_light"
                app:tabTextColor="@color/capway_light_gray_low_alpha_text"
                app:tabTextAppearance="@style/tabLayout">
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/transaction_tab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/transactions"/>
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/deposits_tab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/deposits"/>
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/withdrawals_tab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/withdrawals"/>
            </com.google.android.material.tabs.TabLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_height="40dp"
            android:background="@drawable/search_background"
            app:layout_constraintTop_toBottomOf="@id/tab_layout"
            android:layout_marginTop="8dp">
            <ImageView
                android:id="@+id/search_start_image"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:src="@drawable/search_glass"
                android:layout_marginLeft="14dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/search_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@id/search_start_image"
                app:layout_constraintEnd_toStartOf="@id/search_end_image"
                android:hint="@string/search"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"/>
            <ImageView
                android:id="@+id/search_end_image"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/search_empty"/>
            <ImageView
                android:id="@+id/search_end_image_filled"
                android:layout_width="23dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/search_filled"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="14dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/search"
            app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>