<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    android:layout_marginTop="@dimen/account_activity_padding"
    android:clipChildren="false"
    android:clipToPadding="false">
    <TextView
        android:height="30dp"
        android:gravity="center_vertical"
        android:id="@+id/account_title"
        android:text="@string/application_title"
        android:textStyle="bold"
        android:textColor="@color/capway_grey"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/account_activity_padding"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="@dimen/account_activity_padding"
        app:srcCompat="@drawable/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/account_title"
        android:background="@android:color/transparent"
        app:strokeColor="@android:color/white"
        android:scaleType="fitXY"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

    <View
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        android:id="@+id/account_divider"
        android:layout_width="match_parent"
        android:background="@color/capway_offwhite"
        android:layout_height="1dp"/>

    <View
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintTop_toBottomOf="@id/account_divider"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipChildren="false"
        android:clipToPadding="false">
        <View
            android:id="@+id/bottom_bar_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/capway_border"/>
        <LinearLayout
            android:id="@+id/account_menu_item"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send_menu_item"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            >

            <ImageView
                android:id="@+id/account_menu_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:alpha=".2"
                android:src="@drawable/account_unselected" />

            <TextView
                android:id="@+id/account_menu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/account_menu_title"
                android:textColor="@color/capway_light_grey"
                android:textSize="8dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/send_menu_item"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/more_menu_item"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/account_menu_item">
            <ImageView
                android:id="@+id/send_menu_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitXY"
                android:alpha=".2"
                android:src="@drawable/send_unselected" />

            <TextView
                android:id="@+id/send_menu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/send_menu_title"
                android:textColor="@color/capway_light_grey"
                android:textSize="8dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more_menu_item"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/learn_menu_item"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/send_menu_item"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="2dp">
            <ImageView
                android:id="@+id/more_menu_image"
                android:layout_width="50dp"
                android:layout_height="65dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="-32dp"
                android:scaleType="fitXY"
                android:src="@drawable/more_selected"
                android:elevation="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/learn_menu_item"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/phunds_menu_item"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/more_menu_item">
            <ImageView
                android:id="@+id/learn_menu_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:alpha=".2"
                android:src="@drawable/learn_unselected" />

            <TextView
                android:id="@+id/learn_menu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/learn_menu_title"
                android:textColor="@color/capway_light_grey"
                android:textSize="8dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phunds_menu_item"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/learn_menu_item">
            <ImageView
                android:id="@+id/phunds_menu_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:alpha=".2"
                android:src="@drawable/phunds_unselected" />

            <TextView
                android:id="@+id/phunds_menu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/phunds_menu_title"
                android:textColor="@color/capway_light_grey"
                android:textSize="8dp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>